fix: the `code` doesn’t wrap inside the prompt (#626)
Fixes #626

--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -110,6 +110,7 @@ code {
   &.highlighter-rouge {
     font-size: $code-font-size;
     padding: 3px 5px;
+    word-break: break-word;
     border-radius: 4px;
     background-color: var(--inline-code-bg);
   }
